--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -88,3 +88,5 @@ environments:
         dataSource:
             dbCreate: none
             url: jdbc:h2:mem:prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+
+grails.serverURL: http://localhost:8080
